website with cv

--- a/index.html
+++ b/index.html
@@ -1,1 +1,104 @@
-Hello
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>A. Helms</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/png" href="images/world.png">
+	</head>
+	<body class="is-preload">
+
+		<!-- Header -->
+			<header id="header">
+				<div class="inner">
+					<a class="image avatar"><img src="images/bernd.jpg" alt="" /></a>
+					<h1><strong>Hi there</strong>!</h1>
+				</div>
+			</header>
+
+		<!-- Main -->
+			<div id="main">
+
+				<!-- One -->
+					<section id="one">
+						<header class="major">
+							<h2>About me</h2>
+						</header>
+						<p>This and that.</p>
+						<!-- <ul class="actions">
+							<li>
+								<a onclick="$.fn.scrollTo('cv');" class="button">CV</a>
+							</li>
+						</ul> -->
+					</section>
+
+				<!-- Two: CV -->
+				<section id="cv">
+					<header>
+						<h2>CV</h2>
+					</header>
+					<!-- Education Section -->
+					<section id="education">
+						<header>
+							<h3>Education</h3>
+						</header>
+						<ul>
+							<li>
+								<strong>Physics (M.Sc.) | University of Oldenburg (&#8594 <a href="pdfs/msc_thesis_helms.pdf" target="_blank">Thesis</a>)</strong>
+								<p>2018 &#8211; 2021</p>
+							</li>
+							<li>
+								<strong>Physics (B.Sc.) | University of Münster</strong>
+								<p>2017 &#8211; 2018</p>
+							</li>
+							<li>
+								<strong>Geophysics (B.Sc.) | University of Münster</strong>
+								<p>2013 &#8211; 2017</p>
+							</li>
+						</ul>
+					</section>
+			
+					<!-- Work Experience Section -->
+					<section id="work-experience">
+						<header>
+							<h3>Work</h3>
+						</header>
+						<ul>
+							<li>
+								<strong>Python Developer | Oldenburg</strong>
+								<p>Since 2023</p>
+							</li>
+							<li>
+								<strong>Wind Analyst | Varel</strong>
+								<p>2021 &#8211; 2023</p>
+							</li>
+						</ul>
+					</section>
+				</section>
+
+			</div>
+
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<ul class="icons">
+						<li><a href="https://github.com/ArneHelms" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:contact.arne@proton.me" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; 2024 A. Helms</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
